--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-critical": "^0.2.0",
     "grunt-eslint": "^17.3.1",
+    "grunt-newer": "^1.1.1",
     "grunt-postcss": "^0.7.1",
     "grunt-uncss": "^0.4.4",
     "jit-grunt": "^0.9.1",
@@ -25,7 +26,7 @@
     "postcss-calc": "^5.2.0",
     "postcss-color-function": "^2.0.0",
     "postcss-color-hex-alpha": "^2.0.0",
-    "postcss-custom-media": "^5.0.0",
+    "postcss-custom-media": "^5.0.1",
     "postcss-custom-properties": "^5.0.0",
     "postcss-custom-selectors": "^3.0.0",
     "postcss-import": "^8.0.2",
