--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
   "private": true,
   "devDependencies": {
     "autoprefixer": "^6.3.1",
+    "babel-preset-es2015": "^6.5.0",
     "css-mqpacker": "^4.0.0",
     "csswring": "^4.2.1",
     "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
     "grunt-concurrent": "^2.1.0",
-    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-critical": "^0.2.0",
-    "grunt-eslint": "^17.3.1",
+    "grunt-eslint": "^18.0.0",
     "grunt-newer": "^1.1.1",
     "grunt-postcss": "^0.7.1",
     "grunt-uncss": "^0.4.4",
-    "jit-grunt": "^0.9.1",
+    "jit-grunt": "^0.10.0",
     "mdcss": "^1.5.0",
     "postcss": "^5.0.14",
     "postcss-calc": "^5.2.0",
@@ -38,5 +40,8 @@
     "postcss-selector-not": "^2.0.0",
     "stylelint": "^4.2.0",
     "time-grunt": "^1.3.0"
+  },
+  "dependencies": {
+    "systemjs": "^0.19.22"
   }
 }
