--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-babel": "^6.0.0",
     "grunt-concurrent": "^2.1.0",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-uglify": "^0.11.1",
@@ -21,9 +22,9 @@
     "grunt-eslint": "^18.0.0",
     "grunt-newer": "^1.1.1",
     "grunt-postcss": "^0.7.1",
+    "grunt-systemjs-builder": "^0.2.5",
     "grunt-uncss": "^0.4.4",
     "jit-grunt": "^0.10.0",
-    "mdcss": "^1.5.0",
     "postcss": "^5.0.14",
     "postcss-calc": "^5.2.0",
     "postcss-color-function": "^2.0.0",
