--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "devDependencies": {
     "autoprefixer": "^6.3.1",
     "babel-preset-es2015": "^6.5.0",
+    "babelify": "^7.2.0",
     "css-mqpacker": "^4.0.0",
     "csswring": "^4.2.1",
     "grunt": "^0.4.5",
-    "grunt-babel": "^6.0.0",
+    "grunt-browserify": "^4.0.1",
     "grunt-concurrent": "^2.1.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-connect": "^0.11.2",
@@ -22,7 +23,6 @@
     "grunt-eslint": "^18.0.0",
     "grunt-newer": "^1.1.1",
     "grunt-postcss": "^0.7.1",
-    "grunt-systemjs-builder": "^0.2.5",
     "grunt-uncss": "^0.4.4",
     "jit-grunt": "^0.10.0",
     "postcss": "^5.0.14",
@@ -41,8 +41,5 @@
     "postcss-selector-not": "^2.0.0",
     "stylelint": "^4.2.0",
     "time-grunt": "^1.3.0"
-  },
-  "dependencies": {
-    "systemjs": "^0.19.22"
   }
 }
