--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "author": "BijooLabs",
   "private": true,
   "devDependencies": {
-    "autoprefixer": "^6.3.1",
-    "babel-preset-es2015": "^6.5.0",
+    "autoprefixer": "^6.3.3",
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
+    "browserify-shim": "^3.8.12",
     "css-mqpacker": "^4.0.0",
     "csswring": "^4.2.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
-    "grunt-concurrent": "^2.1.0",
+    "grunt-concurrent": "^2.2.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-copy": "^0.8.2",
@@ -21,11 +22,11 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-critical": "^0.2.0",
     "grunt-eslint": "^18.0.0",
-    "grunt-newer": "^1.1.1",
-    "grunt-postcss": "^0.7.1",
-    "grunt-uncss": "^0.4.4",
+    "grunt-newer": "^1.1.2",
+    "grunt-postcss": "^0.7.2",
+    "grunt-uncss": "^0.5.0",
     "jit-grunt": "^0.10.0",
-    "postcss": "^5.0.14",
+    "postcss": "^5.0.18",
     "postcss-calc": "^5.2.0",
     "postcss-color-function": "^2.0.0",
     "postcss-color-hex-alpha": "^2.0.0",
@@ -39,7 +40,16 @@
     "postcss-quantity-queries": "^0.4.0",
     "postcss-selector-matches": "^2.0.1",
     "postcss-selector-not": "^2.0.0",
-    "stylelint": "^4.2.0",
+    "stylelint": "^4.4.0",
     "time-grunt": "^1.3.0"
+  },
+  "browserify": {
+    "transform": [ "browserify-shim" ]
+  },
+  "browser": {
+    "jquery": "/vendor/jquery-2.2.0.min.js"
+  },
+  "browserify-shim": {
+    "jquery": "global:$"
   }
 }
