--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "Development setup",
   "author": "BijooLabs",
   "private": true,
+  "scripts": {
+    "build": "browserify app/scripts/main.js -o build/scripts/main.js -t [ babelify --presets [ es2015 ] ]"
+  },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
     "css-mqpacker": "^4.0.0",
     "csswring": "^4.2.1",
@@ -50,6 +54,8 @@
     "jquery": "global:$"
   },
   "browserify": {
-    "transform": [ "browserify-shim" ]
+    "transform": [
+      "browserify-shim"
+    ]
   }
 }
