--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "author": "BijooLabs",
   "private": true,
   "scripts": {
-    "build": "browserify app/scripts/main.js -o build/scripts/main.js -t [ babelify --presets [ es2015 ] ]"
+    "setup": "rimraf build && mkdir build && cd build && mkdir scripts styles images && npm run build",
+    "build": "npm run build:js -s & npm run build:css -s & npm run build:images -s",
+    "build:js": "browserify app/scripts/main.js -o build/scripts/main.js -t [ babelify --presets [ es2015 ] ]",
+    "build:css": "postcss -u postcss-import -u postcss-custom-properties -u postcss-calc -u postcss-custom-media -u postcss-media-minmax -u postcss-custom-selectors -u postcss-color-function -u postcss-selector-matches -u postcss-selector-not -u postcss-nested -u autoprefixer '> 1%' 'IE 9' -o build/styles/main.css app/styles/main.css",
+    "build:images": "imagemin app/images/** build/images/ -p",
+    "watch": "parallelshell \"npm run watch:js\" \"npm run watch:css\"",
+    "watch:js": "watch \"npm run build:js -s\" app/scripts/",
+    "watch:css": "watch \"npm run build:css -s\" app/styles/"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
@@ -29,9 +36,12 @@
     "grunt-newer": "^1.1.2",
     "grunt-postcss": "^0.7.2",
     "grunt-uncss": "^0.5.0",
+    "imagemin": "^4.0.0",
     "jit-grunt": "^0.10.0",
+    "parallelshell": "^2.0.0",
     "postcss": "^5.0.18",
     "postcss-calc": "^5.2.0",
+    "postcss-cli": "^2.5.1",
     "postcss-color-function": "^2.0.0",
     "postcss-color-hex-alpha": "^2.0.0",
     "postcss-custom-media": "^5.0.1",
@@ -44,8 +54,10 @@
     "postcss-quantity-queries": "^0.4.0",
     "postcss-selector-matches": "^2.0.1",
     "postcss-selector-not": "^2.0.0",
+    "rimraf": "^2.5.2",
     "stylelint": "^4.4.0",
-    "time-grunt": "^1.3.0"
+    "time-grunt": "^1.3.0",
+    "watch": "^0.17.1"
   },
   "browser": {
     "jquery": "/vendor/jquery-2.2.0.min.js"
