--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "watch": "parallelshell \"npm run livereload\" \"npm run watch:js\" \"npm run watch:css\"",
     "watch:js": "watch \"npm run build:js -s\" app/scripts/",
     "watch:css": "watch \"npm run build:css -s\" app/styles/",
-    "livereload": "livereloadx -p 35729 build/"
+    "livereload": "livereloadx -p 35729 build/",
+    "critical": "critical http://getbootstrap.com/ -m"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
@@ -21,24 +22,12 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
-    "css-mqpacker": "^4.0.0",
-    "csswring": "^4.2.1",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.1",
-    "grunt-concurrent": "^2.2.1",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-uglify": "^0.11.1",
-    "grunt-contrib-watch": "^0.6.1",
+    "critical": "^0.7.1",
     "grunt-critical": "^0.2.0",
     "grunt-eslint": "^18.0.0",
-    "grunt-newer": "^1.1.2",
-    "grunt-postcss": "^0.7.2",
     "grunt-uncss": "^0.5.0",
     "imagemin": "^4.0.0",
-    "jit-grunt": "^0.10.0",
+    "livereloadx": "^0.3.9",
     "parallelshell": "^2.0.0",
     "postcss": "^5.0.18",
     "postcss-calc": "^5.2.0",
@@ -57,7 +46,6 @@
     "postcss-selector-not": "^2.0.0",
     "rimraf": "^2.5.2",
     "stylelint": "^4.4.0",
-    "time-grunt": "^1.3.0",
     "watch": "^0.17.1"
   },
   "browser": {
