--- a/conf/.eslintrc
+++ b/conf/.eslintrc
@@ -2,31 +2,7 @@
   // http://eslint.org/docs/rules/
   // Google Javascript Style Guide
   // Source : https://gist.github.com/netpoetica/9ec88fbca204cd0eda22
-  "env": {
-    "browser": true,      // browser global variables.
-    "node": false,        // Node.js global variables and Node.js-specific rules.
-    "worker": false,      // web workers global variables.
-    "amd": false,         // defines require() and define() as global variables as per the amd spec.
-    "mocha": false,       // adds all of the Mocha testing global variables.
-    "jasmine": false,     // adds all of the Jasmine testing global variables for version 1.3 and 2.0.
-    "phantomjs": false,   // phantomjs global variables.
-    "jquery": false,      // jquery global variables.
-    "prototypejs": false, // prototypejs global variables.
-    "shelljs": false,     // shelljs global variables.
-    "meteor": false,      // meteor global variables.
-    "mongo": false,       // mongo global variables.
-    "applescript": false, // applescript global variables.
-    "es6": false,         // enable all ECMAScript 6 features except for modules.
-  },
-
-  "globals": {
-    "goog": true
-  },
-
-  "plugins": [
-    // e.g. "react" (must run `npm install eslint-plugin-react` first)
-  ],
-
+  "parser": "babel-eslint",
   "rules": {
 
     // Possible Errors
@@ -54,7 +30,7 @@
 
     // Stylistic Issues
     "array-bracket-spacing": [2, "never"], // enforce spacing inside array brackets (off by default)
-    "indent": 2,                      // this option sets a specific tab width for your code (off by default)
+    "indent": [2, 2],                      // this option sets a specific tab width for your code (off by default)
     "no-array-constructor": 2,             // disallow use of the Array constructor
     "no-mixed-spaces-and-tabs": 2,         // disallow mixed spaces and tabs for indentation
     "no-new-object": 2,                    // disallow use of the Object constructor
