--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "watch:js": "watch \"npm run build:js -s\" app/scripts/",
     "watch:css": "watch \"npm run build:css -s\" app/styles/",
     "livereload": "livereloadx -p 35729 build/",
-    "critical": "critical http://getbootstrap.com/ > build/styles/critical.css -m"
+    "critical": "critical http://getbootstrap.com/ > build/styles/critical.css -m",
+    "jslint": "eslint -c conf/.eslintrc app/scripts/main.js app/scripts/modules/**",
+    "csslint": "stylelint app/styles/main.css app/styles/modules/*.css --config conf/.stylelintrc"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
+    "babel-eslint": "^5.0.0",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
     "critical": "^0.7.1",
-    "grunt-critical": "^0.2.0",
-    "grunt-eslint": "^18.0.0",
+    "eslint": "~2.2.0",
     "grunt-uncss": "^0.5.0",
     "imagemin": "^4.0.0",
     "livereloadx": "^0.3.9",
@@ -46,7 +48,7 @@
     "postcss-selector-matches": "^2.0.1",
     "postcss-selector-not": "^2.0.0",
     "rimraf": "^2.5.2",
-    "stylelint": "^4.4.0",
+    "stylelint": "^4.5.1",
     "watch": "^0.17.1"
   },
   "browser": {
