--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "critical": "critical http://getbootstrap.com/ > build/styles/critical.css -m",
     "lint": "npm run jslint & npm run csslint",
     "jslint": "eslint -c conf/.eslintrc app/scripts/main.js app/scripts/modules/**",
-    "csslint": "stylelint app/styles/main.css app/styles/modules/*.css --config conf/.stylelintrc",
-    "test": "mocha test/"
+    "csslint": "stylelint app/styles/main.css app/styles/modules/*.css --config conf/.stylelintrc"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
@@ -32,9 +31,17 @@
     "eslint": "~2.2.0",
     "grunt-uncss": "^0.5.0",
     "imagemin": "^4.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-browserify": "^5.0.2",
+    "karma-cli": "^0.1.2",
+    "karma-fixture": "^0.2.6",
+    "karma-jasmine": "^0.3.7",
+    "karma-jasmine-jquery": "^0.1.1",
+    "karma-phantomjs-launcher": "^1.0.0",
     "livereloadx": "^0.3.9",
-    "mocha": "^2.4.5",
     "parallelshell": "^2.0.0",
+    "phantomjs-prebuilt": "^2.1.5",
     "postcss": "^5.0.18",
     "postcss-calc": "^5.2.0",
     "postcss-cli": "^2.5.1",
@@ -54,15 +61,15 @@
     "stylelint": "^4.5.1",
     "watch": "^0.17.1"
   },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
   "browser": {
     "jquery": "/vendor/jquery-2.2.0.min.js"
   },
   "browserify-shim": {
     "jquery": "global:$"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
   }
 }
