Add js and css uglify

--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "clean": "rimraf build",
     "setup": "npm run clean && mkdir build && cd build && mkdir scripts styles images && npm run build",
     "build": "npm run build:js -s & npm run build:css -s & npm run build:images -s",
-    "build:js": "browserify app/scripts/main.js -o build/scripts/main.js -t [ babelify --presets [ es2015 ] ]",
+    "build:js": "browserify --debug app/scripts/main.js -o build/scripts/main.js -t [ babelify --presets [ es2015 ] ]",
     "build:css": "postcss -u postcss-import -u postcss-custom-properties -u postcss-calc -u postcss-custom-media -u postcss-media-minmax -u postcss-custom-selectors -u postcss-color-function -u postcss-selector-matches -u postcss-selector-not -u postcss-nested -u autoprefixer --autoprefixer.browsers \"> 1%\" \"IE 9\" -u postcss-neat --postcss-neat.neatMaxWidth \"100%\" -o build/styles/main.css app/styles/main.css",
-    "build:images": "imagemin app/images/** build/images/ -p",
+    "build:images": "cp app/images/** build/images/",
     "watch": "parallelshell \"npm run livereload\" \"npm run watch:js\" \"npm run watch:css\"",
     "watch:js": "watch \"npm run build:js -s\" app/scripts/",
     "watch:css": "watch \"npm run build:css -s\" app/styles/",
+    "prod:js": "browserify -g uglifyify app/scripts/main.js -o build/scripts/main.js -t [ babelify --presets [ es2015 ] ]",
+    "prod:css": "cssnano build/styles/main.css build/styles/main.css",
+    "prod:images": "imagemin app/images/** build/images/ -p",
     "livereload": "livereloadx -p 35729 build/",
     "critical": "critical http://getbootstrap.com/ > build/styles/critical.css -m",
     "lint": "npm run jslint & npm run csslint",
@@ -59,6 +62,7 @@
     "postcss-selector-not": "^2.0.0",
     "rimraf": "^2.5.2",
     "stylelint": "^5.0.1",
+    "uglifyify": "^3.0.1",
     "watch": "^0.17.1",
     "watchify": "^3.7.0"
   },
