--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "setup": "npm run clean && mkdir build && cd build && mkdir scripts styles images && npm run build",
     "build": "npm run build:js -s & npm run build:css -s & npm run build:images -s",
     "build:js": "browserify --debug app/scripts/main.js -o build/scripts/main.js -t [ babelify --presets [ es2015 ] ]",
-    "build:css": "postcss -u postcss-import -u postcss-custom-properties -u postcss-calc -u postcss-custom-media -u postcss-media-minmax -u postcss-custom-selectors -u postcss-color-function -u postcss-selector-matches -u postcss-selector-not -u postcss-nested -u autoprefixer --autoprefixer.browsers \"> 1%\" \"IE 9\" -u postcss-neat --postcss-neat.neatMaxWidth \"100%\" -o build/styles/main.css app/styles/main.css",
+    "build:css": "postcss -m -u postcss-import -u postcss-custom-properties -u postcss-calc -u postcss-custom-media -u postcss-media-minmax -u postcss-custom-selectors -u postcss-color-function -u postcss-selector-matches -u postcss-selector-not -u postcss-nested -u autoprefixer --autoprefixer.browsers \"> 1%\" \"IE 9\" -u postcss-neat --postcss-neat.neatMaxWidth \"100%\" -o build/styles/main.css app/styles/main.css",
     "build:images": "cp app/images/** build/images/",
     "watch": "parallelshell \"npm run livereload\" \"npm run watch:js\" \"npm run watch:css\"",
     "watch:js": "watch \"npm run build:js -s\" app/scripts/",
