Remove gruntfile.js, Fix better prod:js task

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf build",
     "build": "npm run build:js -s & npm run build:css -s & npm run build:images -s",
     "build:setup": "npm run clean && mkdir build && cd build && mkdir scripts styles images && npm run build",
-    "build:js": "browserify --debug app/scripts/main.js -o build/scripts/main.js -t [ babelify --presets [ es2015 ] ]",
+    "build:js": "browserify --debug -t [ babelify --presets [ es2015 ] ] app/scripts/main.js -o build/scripts/main.js",
     "build:css": "postcss -m -u postcss-import -u postcss-custom-properties -u postcss-calc -u postcss-custom-media -u postcss-media-minmax -u postcss-custom-selectors -u postcss-color-function -u postcss-selector-matches -u postcss-selector-not -u postcss-nested -u autoprefixer --autoprefixer.browsers \"> 1%\" \"IE 9\" -u postcss-neat --postcss-neat.neatMaxWidth \"100%\" -o build/styles/main.css app/styles/main.css",
     "build:images": "cp app/images/** build/images/",
     "watch": "parallelshell \"npm run livereload\" \"npm run watch:js\" \"npm run watch:css\"",
@@ -16,7 +16,7 @@
     "watch:css": "watch \"npm run build:css -s\" app/styles/",
     "prod": "npm run prod:js & npm run prod:css & npm run prod:images",
     "prod:setup": "npm run clean && mkdir build && cd build && mkdir scripts styles images && npm run build",
-    "prod:js": "browserify -g uglifyify app/scripts/main.js -o build/scripts/main.js -t [ babelify --presets [ es2015 ] ]",
+    "prod:js": "browserify -t [ babelify --presets [ es2015 ] ] -t uglifyify app/scripts/main.js -o build/scripts/main.js ",
     "prod:css": "npm run build:css && cssnano build/styles/main.css build/styles/main.css",
     "prod:images": "imagemin app/images/** build/images/ -p",
     "livereload": "livereloadx -p 35729 build/",
