Add Browsersync instead of livereloadx W.I.P. add criticalCSS

--- a/package.json
+++ b/package.json
@@ -9,28 +9,33 @@
     "build": "npm run build:js -s & npm run build:css -s & npm run build:images -s",
     "build:setup": "npm run clean && mkdir build && cd build && mkdir scripts styles images && npm run build",
     "build:js": "browserify --debug -t [ babelify --presets [ es2015 ] ] app/scripts/main.js -o build/scripts/main.js",
-    "build:css": "postcss -m -u postcss-import -u postcss-custom-properties -u postcss-calc -u postcss-custom-media -u postcss-media-minmax -u postcss-custom-selectors -u postcss-color-function -u postcss-selector-matches -u postcss-selector-not -u postcss-nested -u autoprefixer --autoprefixer.browsers \"> 1%\" \"IE 9\" -u postcss-neat --postcss-neat.neatMaxWidth \"100%\" -o build/styles/main.css app/styles/main.css",
+    "build:css": "postcss -m -u postcss-import -u postcss-custom-properties -u postcss-calc -u postcss-custom-media -u postcss-media-minmax -u postcss-custom-selectors -u postcss-color-function -u postcss-selector-matches -u postcss-selector-not -u postcss-nested -u autoprefixer --autoprefixer.browsers \"> 1%\" \"IE 9\" -u postcss-neat --postcss-neat.neatMaxWidth \"100%\" app/styles/main.css -o build/styles/main.css",
     "build:images": "cp app/images/** build/images/",
-    "watch": "parallelshell \"npm run livereload\" \"npm run watch:js\" \"npm run watch:css\"",
-    "watch:js": "watch \"npm run build:js -s\" app/scripts/",
-    "watch:css": "watch \"npm run build:css -s\" app/styles/",
     "prod": "npm run prod:js & npm run prod:css & npm run prod:images",
     "prod:setup": "npm run clean && mkdir build && cd build && mkdir scripts styles images && npm run build",
     "prod:js": "browserify -t [ babelify --presets [ es2015 ] ] -t uglifyify app/scripts/main.js -o build/scripts/main.js ",
     "prod:css": "npm run build:css && cssnano build/styles/main.css build/styles/main.css",
     "prod:images": "imagemin app/images/** build/images/ -p",
-    "livereload": "livereloadx -p 35729 build/",
-    "critical": "critical http://getbootstrap.com/ > build/styles/critical.css -m",
+    "change": "npm run change:js & npm run change:css",
+    "change:js": "onchange \"app/scripts/**/*.js\" -i -- npm run build:js -s",
+    "change:css": "onchange \"app/styles/**/*.css\" -i -- npm run build:css -s",
     "lint": "npm run jslint & npm run csslint",
     "jslint": "eslint -c conf/.eslintrc app/scripts/main.js app/scripts/modules/** || true",
     "csslint": "stylelint app/styles/main.css app/styles/modules/*.css --config conf/.stylelintrc || true",
-    "karma": "karma start karma.conf.js"
+    "karma": "karma start karma.conf.js",
+    "critical": "critical http://localhost:3000/ -o build/styles/critical.css -m",
+    "server": "browser-sync start --server --files \"build/styles/main.css, build/scripts/main.js\"",
+    "server:dev": "parallelshell \"npm run server\" \"npm run change:js\" \"npm run change:css\"",
+    "generatecrit": "npm run server && npm run critical",
+    "postbuild:css": "echo 'CSS are transpiled'",
+    "postbuild:js": "echo 'JS are transpiled'"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
     "babel-eslint": "^5.0.0",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
+    "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
     "critical": "^0.7.1",
@@ -45,6 +50,7 @@
     "karma-jasmine-jquery": "^0.1.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "livereloadx": "^0.3.9",
+    "onchange": "^2.1.2",
     "parallelshell": "^2.0.0",
     "phantomjs-prebuilt": "^2.1.5",
     "postcss": "^5.0.18",
