--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "clean": "rimraf build",
-    "clearport": "taskkill /F /IM node.exe",
+    "clearport": "taskkill /F /PID node.exe",
     "createFolder": "mkdir build && cd build && mkdir scripts styles images",
     "build": "npm run clean && npm run createFolder && npm run build:init",
     "build:init": "npm run build:js -s & npm run build:css -s & npm run build:images -s",
@@ -25,7 +25,7 @@
     "jslint": "eslint -c conf/.eslintrc app/scripts/main.js app/scripts/modules/** || true",
     "csslint": "stylelint app/styles/main.css app/styles/modules/*.css --config conf/.stylelintrc || true",
     "test": "karma start karma.conf.js",
-    "server": "concurrently \"npm run server:setup\" \"npm run watch:js\" \"npm run watch:css\" \"npm run watch:images\"",
+    "server": "concurrently -k \"npm run server:setup\" \"npm run watch:js\" \"npm run watch:css\" \"npm run watch:images\"",
     "server:setup": "browser-sync start --server --files \"build/styles/main.css, build/scripts/main.js\"",
     "postbuild:css": "echo 'CSS are transpiled'",
     "postbuild:js": "echo 'JS are transpiled'",
