--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
   "private": true,
   "scripts": {
     "clean": "rimraf build",
-    "clearport": "taskkill /F /PID node.exe",
     "createFolder": "mkdir build && cd build && mkdir scripts styles images",
     "build": "npm run clean && npm run createFolder && npm run build:init",
     "build:init": "npm run build:js -s & npm run build:css -s & npm run build:images -s",
     "build:js": "browserify --debug -t [ babelify --presets [ es2015 ] ] app/scripts/main.js -o build/scripts/main.js",
     "build:css": "postcss -m -u postcss-import -u postcss-custom-properties -u postcss-calc -u postcss-custom-media -u postcss-media-minmax -u postcss-custom-selectors -u postcss-color-function -u postcss-selector-matches -u postcss-selector-not -u postcss-nested -u autoprefixer --autoprefixer.browsers \"> 1%\" \"IE 9\" -u postcss-neat --postcss-neat.neatMaxWidth \"100%\" app/styles/main.css -o build/styles/main.css",
-    "build:images": "cp app/images/** build/images/",
+    "build:images": "cpx app/images/** build/images/",
     "prod": "npm run clean && npm run createFolder && npm run prod:init",
     "prod:init": "npm run prod:js & npm run prod:css & npm run prod:images",
-    "prod:js": "browserify -t [ babelify --presets [ es2015 ] ] -t uglifyify app/scripts/main.js -o build/scripts/main.js ",
+    "prod:js": "browserify -t [ babelify --presets [ es2015 ] ] app/scripts/main.js | browserify -g uglifyify -o build/scripts/main.js",
     "prod:css": "npm run build:css && cssnano build/styles/main.css build/styles/main.css",
     "prod:images": "imagemin app/images/** build/images/ -p",
     "watch:js": "onchange \"app/scripts/**/*.js\" -i -- npm run build:js -s",
@@ -25,22 +24,24 @@
     "jslint": "eslint -c conf/.eslintrc app/scripts/main.js app/scripts/modules/** || true",
     "csslint": "stylelint app/styles/main.css app/styles/modules/*.css --config conf/.stylelintrc || true",
     "test": "karma start karma.conf.js",
-    "server": "concurrently -k \"npm run server:setup\" \"npm run watch:js\" \"npm run watch:css\" \"npm run watch:images\"",
-    "server:setup": "browser-sync start --server --files \"build/styles/main.css, build/scripts/main.js\"",
-    "postbuild:css": "echo 'CSS are transpiled'",
-    "postbuild:js": "echo 'JS are transpiled'",
-    "postbuild:images": "echo 'Images are copied'"
+    "start": "concurrently -k \"npm run server:setup\" \"npm run watch:js\" \"npm run watch:css\" \"npm run watch:images\"",
+    "server:setup": "browser-sync start --server --files \"build/\"",
+    "postbuild:init": "echo 'CSS, Js and Images are well proceced'",
+    "postprod:init": "echo 'CSS, JS and Images are optimised'",
+    "postwatch:js": "echo 'JS are reloaded'"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.5",
-    "babel-eslint": "^6.0.0",
+    "autoprefixer": "^6.3.6",
+    "babel-eslint": "^6.0.3",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
-    "browser-sync": "^2.11.2",
+    "browser-sync": "^2.12.3",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
     "concurrently": "^2.0.0",
-    "eslint": "~2.5",
+    "cpx": "^1.3.1",
+    "cssnano-cli": "^1.0.3",
+    "eslint": "^2.8",
     "imagemin": "^4.0.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
@@ -50,25 +51,25 @@
     "karma-jasmine": "^0.3.8",
     "karma-jasmine-jquery": "^0.1.1",
     "karma-phantomjs-launcher": "^1.0.0",
-    "onchange": "^2.2.0",
+    "onchange": "^2.4.0",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss": "^5.0.19",
-    "postcss-calc": "^5.2.0",
+    "postcss-calc": "^5.2.1",
     "postcss-cli": "^2.5.1",
     "postcss-color-function": "^2.0.1",
     "postcss-color-hex-alpha": "^2.0.0",
     "postcss-custom-media": "^5.0.1",
     "postcss-custom-properties": "^5.0.0",
     "postcss-custom-selectors": "^3.0.0",
-    "postcss-import": "^8.0.2",
-    "postcss-media-minmax": "^2.1.1",
-    "postcss-neat": "^2.4.2",
+    "postcss-import": "^8.1.0",
+    "postcss-media-minmax": "^2.1.2",
+    "postcss-neat": "^2.5.2",
     "postcss-nested": "^1.0.0",
     "postcss-quantity-queries": "^0.4.0",
     "postcss-selector-matches": "^2.0.1",
     "postcss-selector-not": "^2.0.0",
     "rimraf": "^2.5.2",
-    "stylelint": "^5.2.1",
+    "stylelint": "^6.0.3",
     "uglifyify": "^3.0.1",
     "watch": "^0.17.1",
     "watchify": "^3.7.0"
