--- a/package.json
+++ b/package.json
@@ -26,42 +26,42 @@
     "test": "karma start karma.conf.js",
     "start": "npm run build && concurrently -k \"npm run server:setup\" \"npm run watch:js\" \"npm run watch:css\" \"npm run watch:images\"",
     "server:setup": "browser-sync start --server --files \"build/\"",
-    "postbuild:init": "echo 'CSS, Js and Images are well proceced'",
+    "postbuild:init": "echo 'CSS, JS and Images are well proceced'",
     "postprod:init": "echo 'CSS, JS and Images are optimised'",
     "postwatch:js": "echo 'JS are reloaded'"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "babel-eslint": "^6.0.3",
+    "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.12.3",
-    "browserify": "^13.0.0",
+    "babelify": "^7.3.0",
+    "browser-sync": "^2.12.7",
+    "browserify": "^13.0.1",
     "browserify-shim": "^3.8.12",
     "concurrently": "^2.0.0",
     "cpx": "^1.3.1",
     "cssnano-cli": "^1.0.3",
-    "eslint": "^2.8",
-    "imagemin": "^4.0.0",
+    "eslint": "^2.9",
+    "imagemin": "^5.1.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
-    "karma-browserify": "^5.0.3",
-    "karma-cli": "^0.1.2",
+    "karma-browserify": "^5.0.5",
+    "karma-cli": "^1.0.0",
     "karma-fixture": "^0.2.6",
-    "karma-jasmine": "^0.3.8",
+    "karma-jasmine": "^1.0.2",
     "karma-jasmine-jquery": "^0.1.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "onchange": "^2.4.0",
     "phantomjs-prebuilt": "^2.1.7",
-    "postcss": "^5.0.19",
+    "postcss": "^5.0.21",
     "postcss-calc": "^5.2.1",
-    "postcss-cli": "^2.5.1",
+    "postcss-cli": "^2.5.2",
     "postcss-color-function": "^2.0.1",
     "postcss-color-hex-alpha": "^2.0.0",
     "postcss-custom-media": "^5.0.1",
-    "postcss-custom-properties": "^5.0.0",
+    "postcss-custom-properties": "^5.0.1",
     "postcss-custom-selectors": "^3.0.0",
-    "postcss-import": "^8.1.0",
+    "postcss-import": "^8.1.2",
     "postcss-media-minmax": "^2.1.2",
     "postcss-neat": "^2.5.2",
     "postcss-nested": "^1.0.0",
@@ -69,9 +69,9 @@
     "postcss-selector-matches": "^2.0.1",
     "postcss-selector-not": "^2.0.0",
     "rimraf": "^2.5.2",
-    "stylelint": "^6.0.3",
+    "stylelint": "^6.3.3",
     "uglifyify": "^3.0.1",
-    "watch": "^0.17.1",
+    "watch": "^0.18.0",
     "watchify": "^3.7.0"
   },
   "browserify": {
